# Arcade

./: .gitignore  Makefile  README.md  vgcore.10585  vgcore.10599  vgcore.10608  vgcore.10698
_build/arcade/: CMakeCache.txt  CMakeLists.txt  Makefile  arcade  cmake_install.cmake
_build/games/centipede/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
_build/games/pacman/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
_build/graphics_libraries/ncurses/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
_build/graphics_libraries/opengl/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
_build/graphics_libraries/sdl2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
_build/graphics_libraries/sfml/: CMakeLists.txt
arcade_core/include/: arcade.hpp
arcade_core/src/: arcade.cpp  main.cpp
assets/arcade/maps/: menu.txt
assets/centipede/: logo
assets/nibbler/: #map.txt#  leaderboard
assets/nibbler/maps/: map.txt  map.txt~
assets/pacman/: leaderboard  logo  map.txt
assets/pacman/maps/: map.txt
games/centipede/include/: centipede.hpp
games/centipede/src/: centipede.cpp  main.cpp
games/nibbler/include/: nibbler.hpp
games/nibbler/src/: nibbler.cpp
games/pacman/include/: pacman.hpp
games/pacman/src/: main.cpp  pacman.cpp
graphics_libraries/ncurses/include/: ncurses.hpp
graphics_libraries/ncurses/src/: main.cpp  ncurses.cpp
graphics_libraries/opengl/include/: opengl.hpp
graphics_libraries/sdl2/include/: sdl2.hpp
graphics_libraries/sdl2/src/: sdl2.cpp
graphics_libraries/sfml/include/: sfml.hpp
interface/: IGame.hpp  IGraphicLib.hpp
(+1 files in other folders)
